# AdventOfCode

./: .gitignore  CMakeLists.txt  FirstTask.hpp  README.md  SecondTask.hpp  TaskBase.hpp  TaskEight.hpp  TaskEleven.hpp  TaskFive.hpp  TaskFour.hpp  TaskFourteen.hpp  TaskNine.hpp  TaskSeven.hpp  TaskSix.hpp  TaskThirteen.hpp  TaskThree.hpp  TaskTwelve.hpp  main.cpp
inputs/: taskSeven.txt
tasks/: Day1.hpp  Day11.hpp  Day12.hpp  Day13.hpp  Day14.hpp  Day15.hpp  Day2.hpp  Day3.hpp  Day4.hpp  Day5.hpp  Day6.hpp  Day7.hpp  Day8.hpp  Day9.hpp
